# Ytd

./: README.md  build.gradle.kts  gradle.properties  jitpack.yml  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/mzgs/ytd/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mzgs/ytd/: MainActivity.kt
app/src/main/java/com/mzgs/ytd/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/mzgs/ytd/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: build-android-libffi.sh
ytdlib/: README.md  build.gradle.kts
ytdlib/src/androidTest/java/com/mzgs/ytdlib/: ExampleInstrumentedTest.kt
ytdlib/src/main/cpp/: CMakeLists.txt  mp3_encoder_jni.c
ytdlib/src/main/cpp/include/: lame_ffi.h
ytdlib/src/main/java/com/mzgs/ytdlib/: AudioToMp3Converter.kt  NativeMp3Encoder.kt  YtDlp.kt
ytdlib/src/main/python/: ytd_bridge.py
ytdlib/src/test/java/com/mzgs/ytdlib/: ExampleUnitTest.kt
